--- a/RGListKit/Base.lproj/Main.storyboard
+++ b/RGListKit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="8mU-bT-863">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Fj6-p2-dgQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -131,6 +131,49 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ab0-V8-jdl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1126" y="56"/>
+        </scene>
+        <!--Stack View Controller-->
+        <scene sceneID="bGG-er-QFg">
+            <objects>
+                <viewController id="Fj6-p2-dgQ" customClass="StackViewController" customModule="RGListKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RHo-5x-sbu"/>
+                        <viewControllerLayoutGuide type="bottom" id="DAz-LI-KSm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SsJ-pL-U9R">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NoS-ID-a9i">
+                                <rect key="frame" x="67" y="64" width="240" height="64"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="5hE-hr-dh8"/>
+                                    <constraint firstAttribute="width" constant="240" id="gWh-b1-aN5"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Vyv-ac-LDo">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="NoS-ID-a9i" firstAttribute="top" secondItem="RHo-5x-sbu" secondAttribute="bottom" constant="44" id="bL0-HG-RTC"/>
+                            <constraint firstItem="NoS-ID-a9i" firstAttribute="centerX" secondItem="SsJ-pL-U9R" secondAttribute="centerX" id="dAW-7a-tl7"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="NoS-ID-a9i" id="9Xs-uk-o7x"/>
+                        <outlet property="collectionViewWidthConstraint" destination="gWh-b1-aN5" id="OrG-Mg-YPX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5bO-Q1-T5j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1924" y="56"/>
         </scene>
     </scenes>
 </document>
